@@ -171,13 +171,13 @@
     % tests/http/ services
     {internal,
         "/tests/http/",
-        cloudi_job_misultin,
+        cloudi_job_http,
         [{compress, true}, {port, 6464}, {output, binary}],
         lazy_closest,
         5000, 5000, 5000, [api], undefined, 1, 5, 300},
     {internal,
         "/tests/http/",
-        cloudi_job_misultin,
+        cloudi_job_http,
         [{compress, true}, {port, 6465}, {output, list}],
         lazy_closest,
         5000, 5000, 5000, undefined, undefined, 1, 5, 300},
@@ -459,6 +459,19 @@
         "/tests/msg_size/",
         "@JAVA@",
         "-jar tests/msg_size/jar/msg_size.jar 1 tcp 16384", [],
+        immediate_closest, tcp, 16384,
+        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300},
+    {external,
+        "/tests/msg_size/",
+        "@PYTHON@",
+        "tests/msg_size/msg_size.py 1 tcp 16384",
+        [],
+        immediate_closest, tcp, 16384,
+        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300},
+    {external,
+        "/tests/msg_size/",
+        "@RUBY@",
+        "tests/msg_size/msg_size.rb 1 tcp 16384", [],
         immediate_closest, tcp, 16384,
         5000, 5000, 5000, [api], undefined, 1, 1, 5, 300}
     %,
